[package]
name = "peerlink"
version = "0.11.1"
edition = "2024"
authors = ["Alfred Hodler <alfred_hodler@protonmail.com>"]
license = "MIT"
repository = "https://github.com/alfred-hodler/peerlink"
description = "Low-level P2P Network Client"
keywords = ["p2p", "peer-to-peer", "networking"]
categories = ["network-programming"]

[features]
socks = ["dep:socks"]
async = ["dep:async-channel"]

[dependencies]
async-channel = { version = "2.5.0", optional = true }
crossbeam-channel = "0.5.15"
hashbrown = "0.16.1"
log = "0.4.28"
mio = { version = "1.1.0", features = ["net", "os-poll"] }
slab = "0.4.11"
socks = { version = "0.3.4", optional = true }

[dev-dependencies]
env_logger = "0.11.8"
